Contact form text subject cutoff issue fix

--- a/client/src/containers/nodes/index.css
+++ b/client/src/containers/nodes/index.css
@@ -317,7 +317,7 @@
 .sellPageContainer,
 .withdrawPageContainer,
 .purchasePageContainer {
-  min-height: calc(100vh - 90px);
+  min-height: calc(100vh - 120px);
   background-color: #FAFAFA;
 }
 
